<resources>
    <string name="app_name">Camel-MasterApplication</string>

    <string name="msg_NO_INTERNET_RESPOND">الرجاء توصيل اتصال المتدرب الخاص بك</string>
    <string name="title_profile">حساب تعريفي</string>
    <string name="dialog_ok">OK</string>
    <string name="yes">yes</string>
    <string name="idno">رقم الهوية*</string>
    <string name="enter_digit">ادخل اخر 8 ارقام للهويه</string>
    <string name="Password">كلمة المرور</string>
    <string name="enter_password">ادخل كلمة السر</string>
    <string name="login">دخول</string>
    <string name="enter_your_user_id">Enter your user Id</string>
    <string name="please_wait">Please Wait..</string>
    <string name="enter_username">ادخل اسم المستخدم</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_camel">قائمة المطايا</string>
    <string name="title_race">التسجيل بالسباق</string>
    <string name="title_history">تاريخ </string>
    <string name="crumple">ابكار</string>
    <string name="abkar">جعدان</string>
    <string name="addcamel">أضف الجمل</string>
    <string name="enterthecamle">اسم الجمل الخاص بك *</string>
    <string name="add">اضافة</string>
    <string name="plese">please</string>
    <string name="OK">Ok</string>
    <string name="Add_camel">أضف الجمل</string>
    <string name="subcribername">اسم الجمل</string>
    <string name="name_camel">camel name</string>
    <string name="survey1">مسح</string>
    <string name="archives">archives</string>
    <string name="username">رقم</string>
    <string name="p_user_name">رقم المستخدم</string>
    <string name="p_name_participate">رقم المستخدم</string>
    <string name="subscriber">اسم المشترك</string>
    <string name="subscriberhint">اسم المشترك</string>
    <string name="email">البريد الالكتروني</string>
    <string name="emailhint">عنوان بريد الكتروني</string>
    <string name="mobile">رقم المحمول</string>
    <string name="mobilehint">أدخل رقم الهاتف المحمول</string>
    <string name="password">كلمة السر</string>
    <string name="passwordhint">أدخل كلمة المرور</string>
    <string name="cpassword">اكد كلمة المرور</string>
    <string name="cpasswordhint">اكد كلمة المرور</string>
    <string name="update">تحديث</string>
    <string name="not_available">not available</string>
    <string name="strock">strock</string>
    <string name="error_subscriber">الرجاء إدخال اسم المشترك</string>
    <string name="error_email">الرجاء إدخال البريد الإلكتروني</string>
    <string name="error_mobile">الرجاء إدخال رقم الهاتف المتحرك</string>
    <string name="error_cpassword">يرجى تأكيد كلمة المرور الصحيحة</string>
    <string name="error_mobile1">الرجاء إدخال رقم الهاتف المحمول</string>
    <string name="data_not_found">لم يتم العثور على بيانات</string>
    <string name="strock1">strock1</string>
    <string name="sex1">sex1</string>
    <string name="sex">sex</string>
    <string name="customization1">customization1</string>
    <string name="customization">التخصيص</string>
    <string name="prize1">price1</string>
    <string name="prize">price</string>
    <string name="title">title</string>
    <string name="your_camel_name">your camel name</string>
    <string name="Addi_camel">add camel</string>
    <string name="datanotfound">data not found</string>
    <string name="camel">camel</string>
    <string name="camel_name">camel name</string>
    <string name="subscriberdetails">subscriber details</string>
    <string name="delete">حذف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camel_no">رقم المطية</string>
    <string name="male">جعدان</string>
    <string name="female">ابكار</string>
    <string name="mobile_no">الهاتف المتحرك</string>

    <string name="user_detail">اضافة مشترك جديد</string>
    <string name="camel_detail">تفاصيل الجمل</string>
    <string name="race_detail">تفاصيل السباق</string>
    <string name="add_schedule">أضف الجدول</string>
    <string name="cancel">يلغي</string>
    <string name="EndDate">
 تاريخ الانتهاء</string>
    <string name="Startdate">تاريخ البدء</string>
    <string name="no_of_round">لا جولة</string>
    <string name="race_id">معرف السباق</string>
    <string name="enddate">تاريخ الانتهاء</string>
    <string name="startdate">تاريخ البدء</string>
    <string name="race_name">race_name</string>
    <string name="title_schedule">جدول السباقات</string>
    <string name="title_archive">ارشيف المشاركة</string>
    <string name="deselect">الغاء تحديد الكل</string>
    <string name="select">اختر الكل</string>
    <string name="role">الصلاحية</string>
    <string name="save">حفظ</string>
    <string name="race_name1">اسم العرق</string>
    <string name="round_name">اسم مستدير</string>
    <string name="type">اكتب</string>
    <string name="description">وصف</string>
    <string name="user_name">رقم المشترك</string>
    <string name="name_of_participant">اسم المشترك</string>
    <string name="email1">بريد الالكتروني</string>
    <string name="race_schedule">جدول السباقات</string>
    <string name="camelList">camelList</string>
    <string name="selected_item">selected_item</string>
    <string name="camel_profile">قائمة المطايا</string>
    <string name="user_profile">حساب المشترك</string>
    <string name="notification">الاشعارات</string>
    <string name="participate_in_race_round">المشاركة بالسباق</string>
    <string name="control_panel">لوحة التحكم</string>
    <string name="race_archive">ارشيف المشاركة</string>
    <string name="terms_condition">الشروط والاحكام</string>
    <string name="done">منجز</string>
    <string name="Alert">إنذار</string>
    <string name="race_successfully_deleted">Race successfully deleted</string>
    <string name="do_you_really_want_to_delete_these_race">Do you really want to delete these Race?</string>
    <string name="do_you_really_want_to_delete_these_user">Do you really want to delete these user?</string>
    <string name="camel_successfully_deleted">تم حذف المطية بنجاح</string>

</resources>