<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:paddingLeft="@dimen/_13sp"
    android:paddingRight="@dimen/_13sp"
    android:paddingTop="@dimen/_5dp"
    android:paddingBottom="@dimen/_20dp"
    android:background="@color/colorPrimaryDark">
    <TableLayout
        android:id="@+id/simpleTableLayout"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/fourRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sub_cname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_10dp"
                android:text="@string/camel"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sub_cname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center"
                android:text="@string/camel_name"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/cell_shape"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
        <TableRow
            android:id="@+id/secondRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sub_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="-1dp"
                android:text="@string/sex1"
                android:background="@drawable/cell_shape"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sub_sex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center"
                android:layout_marginLeft="-1dp"
                android:text="@string/sex"
                android:layout_marginTop="-1dp"

                android:background="@drawable/cell_shape"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
        <TableRow

            android:id="@+id/thirdRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sub_customization"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/cell_shape"
                android:text="@string/customization1"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sub_customization"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="-1dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/cell_shape"
                android:text="@string/customization"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
        <TableRow

            android:id="@+id/fourthRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sub_prize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="-1dp"
                android:background="@drawable/cell_shape"
                android:text="@string/prize1"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sub_prize"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/cell_shape"
                android:text="@string/prize"
                android:layout_marginTop="-1dp"

                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
        <TableRow

            android:id="@+id/fifthhRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <!-- first element of the row-->
            <TextView
                android:id="@+id/sub_sub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/cell_shape"
                android:text="@string/subscriber"
                android:textColor="@color/lighttext"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/tv_sub_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp"
                android:gravity="center"
                android:layout_marginTop="-1dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/cell_shape"
                android:text="@string/subscriberdetails"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/_80dp"
        android:layout_height="30dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/simpleTableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_10dp"
        android:background="@drawable/red_layout"
        android:textColor="@color/login_white"
        android:layout_marginTop="@dimen/_10dp"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>