<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/nestedScrollView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddUserFragment"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19dp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:inputType="text"
            android:hint="@string/username"
            android:maxLines="1"
            android:backgroundTint="@color/Gray"
            android:textColorHint="@color/Gray"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColorHint="@color/Gray"
            android:backgroundTint="@color/Gray"
            android:textSize="@dimen/_16sp"
            android:textDirection="ltr"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textDirection="ltr"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColorHint="@color/Gray"
            android:backgroundTint="@color/Gray"
            android:textSize="@dimen/_16sp"
            android:textDirection="ltr"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_participant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_participant"
            android:textColor="@color/lighttext"
            android:textDirection="ltr"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_participant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:inputType="text"
            android:textColorHint="@color/Gray"
            android:hint="@string/name_of_participant"
            android:backgroundTint="@color/Gray"
            android:maxLines="1"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/mobile_no"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Gray"
            android:textColorHint="@color/Gray"
            android:textDirection="ltr"
            android:inputType="number"
            android:hint="@string/mobile_no"
            android:maxLines="1"
            android:maxLength="10"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tv_camel_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/camel_no"
            android:textColor="@color/lighttext"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_camel_no."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Gray"
            android:textDirection="ltr"
            android:inputType="textPassword"
            android:hint="@string/camel_no"
            android:textColorHint="@color/Gray"
            android:maxLines="1"
            android:maxEms="10"
            android:textSize="@dimen/_16sp"
            android:layout_marginTop="@dimen/_2dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tv_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"
            android:text="@string/role"
            android:textColor="@color/lighttext"
            android:textSize="19sp"
            android:layout_marginTop="20dp"/>

<!--        <EditText-->
<!--            android:id="@+id/et_role"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/Gray"-->
<!--            android:textDirection="ltr"-->
<!--            android:inputType="textPassword"-->
<!--            android:hint="role"-->
<!--            android:textColorHint="@color/Gray"-->
<!--            android:maxLines="1"-->
<!--            android:maxEms="10"-->
<!--            android:textSize="@dimen/_16sp"-->
<!--            android:layout_marginTop="@dimen/_2dp"-->
<!--            android:textColor="@color/black" />-->
           
        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"

            android:paddingBottom="@dimen/_10dp"
            android:textColor="@color/white"
            android:text="@string/save" />

    </androidx.appcompat.widget.LinearLayoutCompat>






</androidx.core.widget.NestedScrollView>